# source-aware-rag-tutor

./: .gitignore  main.py  pyproject.toml
notebooks/: try.ipynb
src/: db.py  ingestion.py
tests/: test_db.py
