[project]
name = "source-aware-rag-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "llama-index>=0.14.8",
    "llama-index-llms-openai>=0.6.9",
    "python-dotenv>=1.0.0",
    "openai>=2.8.1",
    "psycopg>=3.2.13",
]
